# excel-server

./: .gitignore  CHANGELOG.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  TEST_REPORT.md  build.rs  start-docs.ps1
config/: default.toml
docs/: GET_DOWNLOAD.md  PERSISTENCE.md  UPDATE_SUMMARY_v0.2.0.md  spec.md
documentation/: .gitignore  README.md  changelog.md  index.md  package-lock.json  package.json
documentation/.vitepress/: config.mts
documentation/api/: download.md  generate.md  overview.md  system.md
documentation/api/clients/: curl.md  javascript.md  react.md  vue.md
documentation/dsl/: cells.md  conditional-format.md  document-properties.md  overview.md  styles.md  tables.md  validation.md  worksheet.md
documentation/guide/: configuration.md  examples.md  get-download.md  getting-started.md  installation.md  performance.md  persistence.md
examples/: advanced.json  simple.json  test.ps1  test_chinese_filename.ps1  test_get_download.ps1  test_persistence.ps1
src/: config.rs  errors.rs  main.rs  routes.rs
src/handlers/: docs.rs  excel.rs  mod.rs
src/models/: dsl.rs  mod.rs  response.rs
src/services/: excel_generator.rs  file_storage.rs  mod.rs
static/: demo.html
